--- a/CIEcompliance/CIEcompliance.vcxproj.filters
+++ b/CIEcompliance/CIEcompliance.vcxproj.filters
@@ -33,6 +33,21 @@
     <ClCompile Include="error_map.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="testCompliance.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="commons.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="signCompliance.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="digestCompliance.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="verifyCompliance.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cryptoki.h">
@@ -66,6 +81,21 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="error_map.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="testCompliance.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="commons.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="signCompliance.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="digestCompliance.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="verifyCompliance.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
