--- a/CIEcompliance/CIEcompliance.vcxproj
+++ b/CIEcompliance/CIEcompliance.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="pkcs11f.h" />
     <ClInclude Include="pkcs11t.h" />
     <ClInclude Include="signCompliance.h" />
+    <ClInclude Include="softhsm.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="testCompliance.h" />
